<resources>
    <string name="app_name">弦音天气</string>

    <!-- main-->
    <string name="weather">天气</string>
    <string name="live_action">实景</string>
    <string name="me">我</string>
    <string name="search_more_about_weather">搜索更多天气内容</string>
    <string name="real_time_forecast">实时天气</string>

    <!-- weather page-->
    <string name="body_feeling_temperature">体感</string>
    <string name="humility">湿度</string>
    <string name="wind">风</string>
    <string name="air_pressure">气压</string>
    <string name="visibility">能见度</string>
    <string name="refreshing">正在刷新</string>
    <string name="title_activity_daily_weather">DailyWeatherActivity</string>

    <!-- seven-day weather forecast-->
    <string name="details">详情</string>

    <!-- air quality index-->
    <string name="the_trend_of_the_air_quality_index">城市空气质量指数（Aqi）详情</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_life_suggestion">LifeSuggestionActivity</string>
    <string name="title_activity_add_city">AddCityActivity</string>
</resources>
