<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_activity_base_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_activity_main_weather"
            style="@style/activity_main_radio_button"
            android:text="@string/weather"
            android:drawableTop="@drawable/ic_activity_main_weather"/>
        <RadioButton
            android:id="@+id/rb_activity_main_live_action"
            style="@style/activity_main_radio_button"
            android:text="@string/live_action"
            android:drawableTop="@drawable/ic_activity_main_live_action"/>
        <RadioButton
            android:id="@+id/rb_activity_main_me"
            style="@style/activity_main_radio_button"
            android:text="@string/me"
            android:drawableTop="@drawable/ic_activity_main_me"/>
    </RadioGroup>
</FrameLayout>