<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:id="@+id/ll_activity_short_term_forecast_layout"
    android:paddingLeft="40dp" android:paddingStart="40dp"
    android:paddingRight="40dp" android:paddingEnd="40dp"
    android:gravity="center" android:background="@color/black_translucent">

    <!-- temperature-->
    <TextView
        android:id="@+id/tv_activity_short_term_forecast_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="80sp"/>

    <!-- type of the weather such as sunny or cloudy-->
    <TextView
        android:id="@+id/tv_activity_short_term_forecast_weather_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <!-- the description of the weather-->
    <TextView
        android:id="@+id/tv_activity_short_term_forecast_weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>

    <!-- body feeling temperature-->
    <FrameLayout
        style="@style/activity_short_term_forecast_frame_layout">
        <TextView
            style="@style/activity_short_term_forecast_left_text_view"
            android:text="@string/body_feeling_temperature"/>
        <TextView
            android:id="@+id/tv_activity_real_time_weather_body_feeling_temperature"
            style="@style/activity_short_term_forecast_right_text_view"/>
    </FrameLayout>
    <!-- dividing line-->
    <View
        style="@style/activity_short_term_forecast_dividing_line"/>

    <!-- humility-->
    <FrameLayout
        style="@style/activity_short_term_forecast_frame_layout">
        <TextView
            style="@style/activity_short_term_forecast_left_text_view"
            android:text="@string/humility" />
        <TextView
            android:id="@+id/tv_activity_real_time_weather_humility"
            style="@style/activity_short_term_forecast_right_text_view"/>
    </FrameLayout>

    <!-- dividing line-->
    <View
        style="@style/activity_short_term_forecast_dividing_line"/>

    <!-- wind-->
    <FrameLayout
        style="@style/activity_short_term_forecast_frame_layout">
        <TextView
            style="@style/activity_short_term_forecast_left_text_view"
            android:text="@string/wind"/>
        <TextView
            android:id="@+id/tv_activity_real_time_weather_wind"
            style="@style/activity_short_term_forecast_right_text_view"/>
    </FrameLayout>
    <!-- dividing line-->
    <View
        style="@style/activity_short_term_forecast_dividing_line"/>

    <!-- visibility-->
    <FrameLayout
        style="@style/activity_short_term_forecast_frame_layout">
        <TextView
            style="@style/activity_short_term_forecast_left_text_view"
            android:text="@string/visibility"/>
        <TextView
            android:id="@+id/tv_activity_real_time_weather_visibility"
            style="@style/activity_short_term_forecast_right_text_view"/>
    </FrameLayout>
    <!-- dividing line-->
    <View
        style="@style/activity_short_term_forecast_dividing_line"/>

    <!-- air pressure-->
    <FrameLayout
        style="@style/activity_short_term_forecast_frame_layout">
        <TextView
            style="@style/activity_short_term_forecast_left_text_view"
            android:text="@string/air_pressure"/>
        <TextView
            android:id="@+id/tv_activity_real_time_weather_air_pressure"
            style="@style/activity_short_term_forecast_right_text_view"/>
    </FrameLayout>

</LinearLayout>